

- WARNING!!!!!
  -> lwjgl requires Java 8!!!  Try lwjgl3 (works with Java 11) and see whether it also works with Java 8!

- Issue #22 / ODE issue #36: https://bitbucket.org/odedevs/ode/issues/36/fix-gimpact-contacts-handling
  This has been resolved, We need to remove the workaround in OdeConfig::50
// TODO TZ check
// TODO TZ fix
// TODO CHECK-TZ

0.5.0 (unreleased)
=====
- Move to Java [#87](https://github.com/tzaeschke/ode4j/issues/87)
  (Cleanup, part of this was done with the move to 0.15.1)
- Update to ODE 0.15.1 [#86](https://github.com/tzaeschke/ode4j/pull/86)
  - This includes increased stability, e.g. the DemoCards won't collapse anymore when 30 levels high.
  - **** WARNING **** : Still missing: libccd and trimesh collider updates.
- Changed CI build requirements:
  - Removed openjdk7: Not required. source compatibility is still set to 7, but should
    be safe to change to 8 now (Android Nougat is mostly 8 compatible), this covers > 80% users.
  - Changed oraclejdk build to 11



0.4.2
=====
- Fix regression: missing internal version id
- renamed DQuaternion inverse() to eqInverse()

0.4.1
=====
- API convenience changes [#79](https://github.com/tzaeschke/ode4j/pull/79)
  - DBody.addLinearVelocity()
  - DVector3C.reAdd()
  - DQuaternion.ZERO and DQuaternion.IDENTITY
  - Additional DQuaternionC API methods: isEq(), length(), lengthSquared(), ...
  - DQuaternion.toEuler() and fromEuler()
  - DQUaternion.invert() inverts a quaternion
  - DVector3.eqToRadians() and eqToDegrees() convert angles in a DVector3.
- Fixed OSGI bundle info to use Java 1.7 instead of 7.0. [#80](https://github.com/tzaeschke/ode4j/pull/80)
- Removed deprecated `<prerequisites>` tag in `.pom`. [#82](https://github.com/tzaeschke/ode4j/pull/82)
- Fixed some javadoc problems. [#83](https://github.com/tzaeschke/ode4j/pull/83)

0.4.0
=====
- Fixed javadoc to compile without warnings
- Java 9 compatibility automatically detected and used with Maven profiles 